--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-watch": "parcel watch ./client/index.html",
     "start-watch": "nodemon server/index.js",
     "dev": "concurrently --kill-others \"npm run start-watch\" \"npm run build-watch\"",
-    "build": "parcel build ./client/index.html",
+    "build": "parcel build ./app/index.html",
     "start": "npm run build && node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
