--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
   "bugs": {
     "url": "https://github.com/FloPuz/PROJET-ATP/issues"
   },
-  "homepage": "https://github.com/FloPuz/PROJET-ATP#readme"
+  "homepage": "https://github.com/FloPuz/PROJET-ATP#index.html"
 }
